- Refactor package name to anom.netguard - Enable all PRO features

--- a/app/src/main/res/layout/rule.xml
+++ b/app/src/main/res/layout/rule.xml
@@ -436,7 +436,7 @@
                 android:textAppearance="@style/TextSmall"
                 android:textStyle="italic" />
 
-            <eu.faircode.netguard.ExpandedListView
+            <anom.netguard.ExpandedListView
                 android:id="@+id/lvAccess"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
